kubernetes/cluster-policies/orders-api-authz.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: orders-api-allow-orders-worker
  namespace: orders-lab
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: orders-api-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: orders-worker-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: orders-api-allow-host-originated-traffic
  namespace: orders-lab
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: orders-api-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: k3s-node-bridge-gateway
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: orders-api-allow-storefront-service
  namespace: orders-lab
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: orders-api-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: storefront-service-identity
